# ft_ls

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  ft_ls.c  gtest  install
include/: ft_ls.h
src/: errors.c  ft_ls.c  utils.c
src/tools/: debug.c  parser.c  s_dir.c  struct.c  utils.c
src/tools/error_handling/: errors.c
tests/: main.cc  maintest.c  maintest.cpp
